tests/paczka2/big_fuzzy/77607202.err
Error in line 8: 5eMi4qZn3L S622 138,8
Error in line 9: 5eMi4qZn3L S299 5,6
Error in line 10: 5eMi4qZn3L S622 86,2
Error in line 15: 2gOl S299 3,3
Error in line 22: 2gOl S622 92,6
Error in line 38: S700 S700 18,0
Error in line 48: gbRM S700 50,7
Error in line 49: gbRM A703 24,2
Error in line 50: gbRM S622 82,2
Error in line 41: S700 A703 15,9
Error in line 74: gbRM S299 86,8
Error in line 83: 5eMi4qZn3L S700 4,4
Error in line 82: S700 A703 39,6
Error in line 95: BvB4Rx S7** 46,6
Error in line 84: 2gOl S700 67,5
Error in line 97: 2gOl S622 50,4
Error in line 98: BvB4Rx S700 138,4
Error in line 108: gbRM S622 284,7
Error in line 110: gbRM S700 3,0
Error in line 111: gbRM S299 65,0
Error in line 102: S700 S299 346,3
Error in line 120: BGmK8 S299 280,46
Error in line 109: 5eMi4qZn3L S622 229,0
Error in line 119: BGmK8 S299 69,8
Error in line 124: TjqBS4 S622 77,5
Error in line 143: BGmK8 S700 99,7
Error in line 150: BGmK8 S622 657,2
Error in line 165: TjqBS4 S622 12,1
Error in line 168: S700 S700 4,9
Error in line 175: gbRM S622 65,2
Error in line 186: gbRM S700 -3,1
Error in line 193: gbRM S700 36,3
Error in line 169: 2gOl S622 52,0
Error in line 198: 2gOl S299 82,5
Error in line 203: TjqBS4 A703 69,8
Error in line 207: TjqBS4 S299 69,6
Error in line 217: 2gOl S700 283,52
Error in line 222: BGmK8 S299 11,1
Error in line 223: BGmK8 A703 93,6
Error in line 205: 2gOl S700 63,5
Error in line 225: BGmK8 S299 66,6
Error in line 231: BvB4Rx S299 64,1
Error in line 233: BGmK8 S622 47,8
Error in line 240: BGmK8 A703 89,3
Error in line 239: 5eMi4qZn3L S622 23,0
Error in line 250: BvB4Rx S299 ,2
